@@ -2,6 +2,8 @@
 
 	* fvwm/{fvwm.c,screen.h,icons.c} Fixed client supplied icon pixmaps
 	with the -visual option and different root/fvwm depths with Exceed
+	* fvwm/borders.c: title button pixmaps that are smaller then the title
+	height by an odd number are one pixel down (makes win95 styles better)
 
 1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
